quick text alignment fix for p elements (right-align)

--- a/styles/sass/partials/_global.scss
+++ b/styles/sass/partials/_global.scss
@@ -22,6 +22,7 @@ p {
     padding-left: 70px;
     transition: 0.3s;
     margin: 0;
+    text-align: right;
 }
 
 img {
