--- a/styles/style.css
+++ b/styles/style.css
@@ -251,6 +251,7 @@ p {
   -webkit-transition: 0.3s;
   transition: 0.3s;
   margin: 0;
+  text-align: right;
 }
 
 img {
